--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="game_over" id="gameOver">
-        <div style="color: crimson; font-size:120%">Game Over</div>
+        <div class="GoA">Game Over</div>
         <div class="your_score" id="yourScore">Your Score</div>
         <div id="endScore">0</div>
         <button class="btn" id="btn" onclick="re()">Try Again</button>
